Revision history for {{$dist->name}}

{{$NEXT}}
        - fix sloppy grouping now needed for stricter MySQL 5.7
        - deactivate super-slow size info in reports

5.0.12    2016-09-23
        - report list - fix rounding bugs in success ratio bar length

5.0.11    2016-08-24
        - report details - failures with machine name
        - testrun list now based on 'updated at'

5.0.10    2016-04-07
        - rt#113510 - require higher version of DateTime::Format::Strptime
          [Kudos to Andreas König]

5.0.9     2016-03-31
        - some test diagnostics to investigate cpantesters fails

5.0.8     2016-03-30
        - more explicit deps

5.0.7     2016-03-22
        - reportlist: fix successgrade column with MySQL backend

5.0.6     2016-03-03
        - bugfixes and polishing around charts

5.0.5     2016-02-29
        - edit/resurrect older chart versions as new version
        - avoid repetition of duplicate test execution context
        - replace MySQL-specific parts
        - replace Tapper::Benchmark with BenchmarkAnything
        - fix minor HTML/CSS glitches

5.0.4     2016-02-18
        - fix other fields in report list due to missing r. prefix

5.0.3     2016-02-17
        - fix 'successgrade' in report list

5.0.2     2016-02-16
        - fix tests

5.0.1     2016-02-15
        - fix smart match usage
	- let EU::MM decide about Perl binary paths
	- no experimental keys on hashref

5.0.0     2016-02-15
        - big performance scale-up refactoring
          * use raw sql statements
          * rework report list
          * more CSS instead of tables and images
        - use PSGI
        - use Starman
        - continuous testing control page
        - replaced "metareports" with a new benchmark chart subsystem:
          * frontend to the Tapper::Benchmark backend store
          * snapshots datasets into short URLs
          * organize them with tags
          * versioned chart configuration
          * chart legend
          * mark areas